--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "dev-backend": "npm run build-backend && node dist-backend/backend/index.js"
   },
   "dependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@duitang/dt-base": "^2.1.11",
+    "@duitang/dt-react-mobile": "^3.1.13",
     "@fastify/cors": "^8.2.0",
     "antd": "^5.0.2",
     "axios": "^1.2.1",
     "chalk": "^5.1.2",
     "dayjs": "^1.11.7",
     "esbuild": "^0.16.1",
+    "esbuild-plugin-less": "^1.1.11",
     "fastify": "^4.10.2",
     "immer": "^9.0.16",
     "prism-react-renderer": "^1.3.5",
