--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-dom": "^6.4.3",
     "react-simple-code-editor": "^0.13.1",
     "styled-components": "^5.3.6",
-    "ws": "^8.11.0"
+    "ws": "^8.11.0",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
