--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "dev-backend": "npm run build-backend && node dist-backend/backend/index.js"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@babel/core": ">=7.0.0 <8.0.0",
     "@duitang/dt-base": "^2.1.11",
-    "@duitang/dt-react-mobile": "^3.1.17",
+    "@duitang/dt-react-mobile": "^3.1.18",
     "@fastify/cors": "^8.2.0",
     "antd": "^5.0.2",
     "axios": "^1.2.1",
@@ -28,6 +29,7 @@
     "prism-react-renderer": "^1.3.5",
     "qiankun": "^2.8.4",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -45,6 +47,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": ">=5.13.0 <6.0.0",
