feat: 后端编译文件缓存方式换成redis & 修改背景色选择器默认值

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
     "no-nested-ternary": "off",
     "no-case-declarations": "off",
     "import/no-named-default": "off",
-    "no-use-before-define": "error"
+    "no-use-before-define": "error",
+    "prefer-promise-reject-errors": "off"
   },
   "extends": [
     "airbnb",
