--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esbuild-plugin-less": "^1.1.11",
     "fastify": "^4.10.2",
     "immer": "^9.0.16",
+    "mongodb": "^4.13.0",
     "prism-react-renderer": "^1.3.5",
     "qiankun": "^2.8.4",
     "react": "^18.2.0",
