--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "antd": "^5.0.2",
     "axios": "^1.2.1",
     "chalk": "^5.1.2",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "esbuild": "^0.16.1",
     "esbuild-plugin-less": "^1.1.11",
     "fastify": "^4.10.2",
     "immer": "^9.0.16",
+    "jsencrypt": "^3.3.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "prism-react-renderer": "^1.3.5",
     "qiankun": "^2.8.4",
@@ -47,6 +50,8 @@
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-color": "^3.0.6",
