feat: 完成模板可二次编辑 & 修复了一些bug

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "no-case-declarations": "off",
     "import/no-named-default": "off",
     "no-use-before-define": "error",
-    "prefer-promise-reject-errors": "off"
+    "prefer-promise-reject-errors": "off",
+    "consistent-return": "off"
   },
   "extends": [
     "airbnb",
