--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "immer": "^9.0.16",
     "jsencrypt": "^3.3.1",
     "jsonwebtoken": "^9.0.0",
+    "lodash-es": "^4.17.21",
     "mongodb": "^4.13.0",
     "node-rsa": "^1.1.1",
     "prism-react-renderer": "^1.3.5",
@@ -56,6 +57,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.9",
     "@types/node-rsa": "^1.1.1",
     "@types/react": "^18.0.24",
