--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-rsa": "^1.1.1",
     "prism-react-renderer": "^1.3.5",
     "qiankun": "^2.8.4",
+    "rc-select": "^14.2.0",
     "rc-tween-one": "^3.0.6",
     "rc-virtual-list": "^3.4.13",
     "react": "^18.2.0",
