--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview",
     "husky-prepare": "husky install",
     "test": "lint-staged --allow-empty && jest",
-    "build-backend": "npx swc src/backend --only **/*.ts -d dist-backend --config-file .swcrc && node ./.sh/copyFolder.js ./asymmetricEncryptionKeys ./dist-backend/asymmetricEncryptionKeys",
-    "dev-backend": "npm run build-backend && node dist-backend/backend/index.js"
+    "build-backend": "npx swc src/backend --only **/*.ts -d dist-backend --config-file .swcrc && node ./.sh/copyFolder.js ./asymmetricEncryptionKeys ./dist-backend/asymmetricEncryptionKeys && rm -rf ./dist-backend/_temp",
+    "dev-backend": "npm run build-backend && node dist-backend/backend/index.js",
+    "deploy": "rm -f dist.zip && npm run build-frontend && npm run build-backend && zip -r dist.zip ./.bin ./.sh ./dist-backend ./dist-frontend ./package.json ./pnpm-lock.yaml ecosystem.config.js",
+    "start": "sh ./.bin/check_pm2_plugin.sh && pm2 start ecosystem.config.js",
+    "pm2": "pm2"
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
@@ -32,6 +35,7 @@
     "lodash-es": "^4.17.21",
     "mongodb": "^4.13.0",
     "node-rsa": "^1.1.1",
+    "pm2": "^5.2.2",
     "prism-react-renderer": "^1.3.5",
     "qiankun": "^2.8.4",
     "rc-select": "^14.2.0",
