--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "lint-staged --allow-empty && jest",
     "build-backend": "npx swc src/backend --only **/*.ts -d dist-backend --config-file .swcrc && node ./.sh/copyFolder.js ./asymmetricEncryptionKeys ./dist-backend/asymmetricEncryptionKeys && rm -rf ./dist-backend/_temp",
     "dev-backend": "npm run build-backend && node dist-backend/backend/index.js",
-    "deploy": "rm -f dist.zip && npm run build-frontend && npm run build-backend && zip -r dist.zip ./.bin ./.sh ./dist-backend ./dist-frontend ./package.json ./pnpm-lock.yaml ecosystem.config.js",
+    "zip": "rm -f dist.zip && npm run build-frontend && npm run build-backend && zip -r dist.zip ./.bin ./.sh ./dist-backend ./dist-frontend ./package.json ./pnpm-lock.yaml ecosystem.config.js",
     "start": "sh ./.bin/check_pm2_plugin.sh && pm2 start ecosystem.config.js",
     "pm2": "pm2"
   },
